src/objects/copado__Automation_Event__c.object
<CustomObject>
    <fields>
        <fullName>copado__Action_Name__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Action_Result__c</fullName>
        <label>Action Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Action_Status__c</fullName>
        <label>Action Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment_Id__c</fullName>
        <label>Environment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Job_Execution_Id__c</fullName>
        <label>Job Execution Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Log__c</fullName>
        <label>Automation Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Payload__c</fullName>
        <description>This field contains information required by Submit User Stories Action.</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline_Id__c</fullName>
        <label>Pipeline Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Stage_Id__c</fullName>
        <label>Stage Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Target_Action_Job_Execution_Ids__c</fullName>
        <label>Target Action Job Execution Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Target_Action_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Target Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Automation Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{0000000000}</displayFormat>
        <label>MC Automation Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>